# BullsAndCows

./: CMakeLists.txt  Chooser.cpp  Chooser.hpp  Demo.cpp  Guesser.cpp  Guesser.hpp  README.md  SmartGuesser.cpp  SmartGuesser.hpp  Test.cpp  a.out  calculate.cpp  calculate.hpp  play.cpp  play.hpp
